add results of exp1a, more one lmm

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -191,7 +191,7 @@ For participants recruited in Wenzhou University, they finished the experiment i
 
 We reported all the measurements, analysis and results in all the experiments in the current study. All data were first pre-processed using R R (Version 3.6.0; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.23.0; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.22; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{coda} (Version 0.19.2; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 0.8.0.1; Wickham et al., 2019), \emph{emmeans} (Version 1.3.4; Lenth, 2019), \emph{forcats} (Version 0.4.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggplot2} (Version 3.1.1; Wickham, 2016), \emph{ggstatsplot} (Version 0.0.10; Patil \& Powell, 2018), \emph{Hmisc} (Version 4.2.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008), \emph{lme4} (Version 1.1.21; Bates, Mächler, Bolker, \& Walker, 2015), \emph{MASS} (Version 7.3.51.4; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.17; Bates \& Maechler, 2019), \emph{MBESS} (Version 4.4.3; Kelley, 2018), \emph{multcomp} (Version 1.4.10; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.0.10; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.4; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.8.12; Revelle, 2018), \emph{purrr} (Version 0.3.2; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.3; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 2.44.1.1; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 2.1.1; Müller \& Wickham, 2019), \emph{tidyr} (Version 0.8.3; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.2.1; Wickham, 2017). The clean data were analyzed using JASP (0.8.6.0, www.jasp-stats.org, (Love et al., 2019)). Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
 
-We analyzed accuracy performance using a signal detection approach, as in Sui et al. (2012). The performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of d'. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The d' were then analyzed using repeated measures analyses of variance (repeated measures ANOVA).
+We analyzed accuracy performance using a signal detection approach, as in Sui et al.~(2012). The performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of d'. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The d' were then analyzed using repeated measures analyses of variance (repeated measures ANOVA).
 
 The reaction times of accurate trials were also analyzed using repeated measures ANOVA. To control the false positive when conducting the post-hoc comparisons, we used Bonferroni correction. Please note that in the first two experiment (experiment 1a and 1b), we included the variable matchness (matched vs.~mismatched) in our ANOVA of reaction times and then examine matched trials and mismatched trials separately when the interaction between matchness and other variables are significant. In both experiments, we found significant interaction between matchness and valence. Then, as previous study, we focused on the matched trial for the rest of the experiment (Sui et al., 2012).
 
@@ -199,15 +199,13 @@ We reported the effect size of repeated measures ANOVA (omega squared) (Bakeman,
 
 To assess the individual difference, we explored correlation between self-reported psychological distance and more objective responses bias (i.e., reaction times and d prime). To do this, we first normalized the personal distance by taking the percentage of the mean distance between each two persons in the sum of all 6 distances (self-good, self-normal, self-bad, good-normal, good-bad, normal-bad), and then calculated the bias score (indexed by the differences between good-normal, good-bad). Also, as exploratory analysis, we analyzed the correlation between behavioral response and moral identity, self-esteem, if data are available. As recent study showed that small size leads to unstable correlation estimates (Schönbrodt \& Perugini, 2013), we only reported the correlation based on data pooled from all experiments, while the results of each experiment were reported in supplementary results.
 
-\hypertarget{experiment-4a}{%
-\section{Experiment 4a}\label{experiment-4a}}
-
-In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
+\hypertarget{experiment-1a}{%
+\section{Experiment 1a}\label{experiment-1a}}
 
 \hypertarget{participants}{%
 \subsection{Participants}\label{participants}}
 
-64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
+57 college students (38 female, age = 20.75 \(\pm\) 2.54 years) participated. 39 of them were recruited from Tsinghua University community in 2014; 18 were recruited from Wenzhou University in 2017. All participants were right-handed except one, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committees. 6 participant's data were excluded from analysis because nearly random level of accuracy (4 participants from the Tsinghua sample and 2 from the Wenzhou sample), leaving 51 participants (34 female, age = 20.72 \(\pm\) 2.44 years).
 
 \hypertarget{results}{%
 \subsection{Results}\label{results}}
@@ -217,7 +215,7 @@ In study 1-3 participants made explicit judgements about moral associations. In 
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
-We found the effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\), \(p < .001\), \(\hat{\eta}^2_G = .189\)) and its interaction with valence (the effect of gender differed by clinic, (\(F(1.99, 115.2) = 4.12\), \(\mathit{MSE} = 0.14\), \(p = .019\), \(\hat{\eta}^2_G = .004\)). But the effect of valence was not found, \(F(1.93, 111.66) = 0.53\), \(\mathit{MSE} = 0.12\), \(p = .581\), \(\hat{\eta}^2_G = .000\).
+We found the effect of Valence (\(F(2, 100) = 6.19\), \(\mathit{MSE} = 0.26\), \(p = .003\), \(\hat{\eta}^2_G = .020\)).
 
 \begin{table}[tbp]
 \begin{center}
@@ -225,11 +223,100 @@ We found the effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\),
 \caption{\label{tab:unnamed-chunk-2}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
+Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
+\midrule
+Valence & 6.19 & 2 & 100 & 0.26 & .003 & .020\\
+\bottomrule
+\addlinespace
+\end{tabular}
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} Note that the column names contain beautiful mathematical copy: This is because the table has variable labels.}
+\end{tablenotes}
+\end{threeparttable}
+\end{center}
+\end{table}
+
+We further examined the effect of valence.
+
+contrast estimate SE df t.ratio p.value
+Good - Neutral 0.157 0.102 50 1.540 0.2814
+Good - Bad 0.357 0.108 50 3.304 0.0049
+Neutral - Bad 0.200 0.095 50 2.109 0.0982
+
+P value adjustment: tukey method for comparing a family of 3 estimates
+
+\hypertarget{analaysis-of-reaction-time.}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
+
+We conducted 2 (Matchness: Match v. Mismatch) by 3 (Valence: good, neutral, bad) repeated measure ANOVA:
+
+We found the main effect of Matchness (\(F(1, 50) = 232.39\), \(\mathit{MSE} = 948.92\), \(p < .001\), \(\hat{\eta}^2_G = .104\)) and intercation between Matchness and Valence (\(F(1.73, 86.65) = 8.52\), \(\mathit{MSE} = 1,441.75\), \(p = .001\), \(\hat{\eta}^2_G = .011\))
+
+We carried out two separate ANOVA for both Match and mismatched trials.
+
+For matched trials, we found the effect of valence \(F(1.78, 89.24) = 10.52\), \(\mathit{MSE} = 2,693.58\), \(p < .001\), \(\hat{\eta}^2_G = .048\).
+
+For non-matched trials, there was no significant effect of Valence (\(F(1.85, 92.57) = 0.96\), \(\mathit{MSE} = 439.94\), \(p = .381\), \(\hat{\eta}^2_G = .001\)).
+
+\begin{table}[tbp]
+\begin{center}
+\begin{threeparttable}
+\caption{\label{tab:unnamed-chunk-4}A really beautiful ANOVA table.}
+\begin{tabular}{lllllll}
+\toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
 \midrule
+Valence & 10.52 & 1.78 & 89.24 & 2,693.58 & < .001 & .048\\
+\bottomrule
+\addlinespace
+\end{tabular}
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} Note that the column names contain beautiful mathematical copy: This is because the table has variable labels.}
+\end{tablenotes}
+\end{threeparttable}
+\end{center}
+\end{table}
+
+We further examined the effect of valence for both self and other for mached trials.
+
+contrast estimate SE df t.ratio p.value
+Good - Neutral -24.6 10.88 50 -2.265 0.0702
+Good - Bad -44.4 10.08 50 -4.410 0.0002
+Neutral - Bad -19.8 7.94 50 -2.495 0.0415
+
+P value adjustment: tukey method for comparing a family of 3 estimates
+
+\hypertarget{experiment-4a}{%
+\section{Experiment 4a}\label{experiment-4a}}
+
+In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
+
+\hypertarget{participants-1}{%
+\subsection{Participants}\label{participants-1}}
+
+64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
+
+\hypertarget{results-1}{%
+\subsection{Results}\label{results-1}}
+
+\hypertarget{analaysis-of-d-prime.-1}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-1}}
+
+We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
+
+We found the effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\), \(p < .001\), \(\hat{\eta}^2_G = .189\)) and its interaction with valence (the effect of gender differed by clinic, (\(F(2, 116) = 4.12\), \(\mathit{MSE} = 0.14\), \(p = .019\), \(\hat{\eta}^2_G = .004\)). But the effect of valence was not found, \(F(2, 116) = 0.53\), \(\mathit{MSE} = 0.11\), \(p = .587\), \(\hat{\eta}^2_G = .000\).
+
+\begin{table}[tbp]
+\begin{center}
+\begin{threeparttable}
+\caption{\label{tab:unnamed-chunk-6}A really beautiful ANOVA table.}
+\begin{tabular}{lllllll}
+\toprule
+Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
+\midrule
 Identity & 121.04 & 1 & 58 & 0.48 & < .001 & .189\\
-Morality & 0.53 & 1.93 & 111.66 & 0.12 & .581 & .000\\
-Identity $\times$ Morality & 4.12 & 1.99 & 115.2 & 0.14 & .019 & .004\\
+Morality & 0.53 & 2 & 116 & 0.11 & .587 & .000\\
+Identity $\times$ Morality & 4.12 & 2 & 116 & 0.14 & .019 & .004\\
 \bottomrule
 \addlinespace
 \end{tabular}
@@ -242,8 +329,8 @@ Identity $\times$ Morality & 4.12 & 1.99 & 115.2 & 0.14 & .019 & .004\\
 
 We further examined the effect of valence for both self and other.
 
-\hypertarget{analaysis-of-reaction-time.}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
+\hypertarget{analaysis-of-reaction-time.-1}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -258,7 +345,7 @@ For non-matched trials, there was no significant effect. Morality (\(F(1, 58) = 
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-4}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-8}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -276,7 +363,7 @@ Identity $\times$ Morality & 4.41 & 1.9 & 110.18 & 465.91 & .016 & .003\\
 \end{center}
 \end{table}
 
-We further examined the effect of valence for both self and other.
+We further examined the effect of valence for both self and other for mached trials.
 
 Identity = Other:
 contrast estimate SE df t.ratio p.value
@@ -306,14 +393,14 @@ Other - Self 72.2 7.06 58 10.231 \textless{}.0001
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b:}\label{experiment-4b}}
 
-\hypertarget{participants-1}{%
-\subsection{Participants}\label{participants-1}}
+\hypertarget{participants-2}{%
+\subsection{Participants}\label{participants-2}}
 
-\hypertarget{results-1}{%
-\subsection{Results}\label{results-1}}
+\hypertarget{results-2}{%
+\subsection{Results}\label{results-2}}
 
-\hypertarget{analaysis-of-d-prime.-1}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-1}}
+\hypertarget{analaysis-of-d-prime.-2}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-2}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -332,7 +419,7 @@ Morality (\(F(1.59, 69.94) = 2.34\), \(\mathit{MSE} = 0.48\), \(p = .115\), \(\h
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-6}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-10}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -393,8 +480,8 @@ Neutral - Bad == 0 0.0668 0.0872 0.77 0.45
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{results-2}{%
-\section{Results}\label{results-2}}
+\hypertarget{results-3}{%
+\section{Results}\label{results-3}}
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
