--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -107,6 +107,111 @@ We reported the effect size of repeated measures ANOVA (omega squared) (Bakeman,
 
 To assess the individual difference, we explored correlation between self-reported psychological distance and more objective responses bias (i.e., reaction times and d prime). To do this, we first normalized the personal distance by taking the percentage of the mean distance between each two persons in the sum of all 6 distances (self-good, self-normal, self-bad, good-normal, good-bad, normal-bad), and then calculated the bias score (indexed by the differences between good-normal, good-bad). Also, as exploratory analysis, we analyzed the correlation between behavioral response and moral identity, self-esteem, if data are available. As recent study showed that small size leads to unstable correlation estimates (Schönbrodt & Perugini, 2013), we only reported the correlation based on data pooled from all experiments, while the results of each experiment were reported in supplementary results.
 
+
+# Experiment 1a
+
+```{r loadingData_1a,echo=FALSE,results='hide'}
+df1a_dprime_long <- read.csv('.\\exp1a\\exp1a_dprime_long.csv') %>%
+  dplyr::rename(Valence = Morality) %>%
+  dplyr::mutate(Valence = factor(Valence, levels = c("Good", "Neutral", "Bad")))
+
+df1a_rt_acc_long <- read.csv('.\\exp1a\\exp1a_rt_acc_long.csv') %>%
+  dplyr::rename(Valence = Morality) %>%
+  dplyr::mutate(Valence = factor(Valence, levels = c("Good", "Neutral", "Bad"))) %>%
+  dplyr::rename(Matchness = Match) #%>%
+  #dplyr::mutate(Match = ifelse(Match == 'Match', 'match','mismatch'))
+```
+## Participants
+57 college students (38 female, age = 20.75 $\pm$ 2.54 years) participated. 39 of them were recruited from Tsinghua University community in 2014; 18 were recruited from Wenzhou University in 2017. All participants were right-handed except one, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committees. 6 participant’s data were excluded from analysis because nearly random level of accuracy (4 participants from the Tsinghua sample and 2 from the Wenzhou sample), leaving 51 participants (34 female, age = 20.72 $\pm$ 2.44 years).
+
+## Results
+### Analaysis of d prime.
+We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
+```{r 1a_dprime, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+# anova for d prime with 2*2 design
+df1a_dprime_anova <- afex::aov_ez('Subject','dprime',df1a_dprime_long,  # using afex's function 
+                                  within = c('Valence'))
+
+# use LMM, random intercept for each participant
+df1a_d_mixed <- afex::mixed(dprime ~ Valence +(1|Subject), 
+                          df1a_dprime_long,
+                          method = "S",
+                          control = lmerControl(optCtrl = list(maxfun = 1e6)))
+
+df1a_dprime_anova_apa <- df1a_dprime_anova$aov %>% papaja::apa_print()
+#df4b_dprime_anova <- apa_print(df4b_dprime_anova)
+```
+We found the effect of Valence (`r df1a_dprime_anova_apa$full$Valence`).
+
+```{r results='asis', echo = F}
+#knitr::kable(nice(df4b_dprime_anova), caption = "ANOVA of d prime")
+apa_table(df1a_dprime_anova_apa$table
+  , caption = "A really beautiful ANOVA table."
+  , note = "Note that the column names contain beautiful mathematical copy: This is because the table has variable labels."
+)
+```
+
+We further examined the effect of valence. 
+
+```{r results='asis', echo = F}
+posthoc_1a_d <- emmeans::emmeans(df1a_dprime_anova, "Valence") # compare each valence for both self and other condition
+pairs(posthoc_1a_d)
+```
+
+### Analaysis of reaction time.
+We conducted 2 (Matchness: Match v. Mismatch) by 3 (Valence: good, neutral, bad) repeated measure ANOVA:
+```{r 1a_RT, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+# anova for d prime with 2*2 design
+df1a_RT_anova <- afex::aov_ez('Subject','RT',df1a_rt_acc_long,     # using afex's function 
+                                  within = c('Matchness','Valence'))
+df1a_RT_anova_apa <- df1a_RT_anova %>% papaja::apa_print()
+
+# use LMM, random intercept for each participant
+df1a_RT_mixed <- afex::mixed(RT ~ Matchness*Valence +(1|Subject), 
+                          df1a_rt_acc_long,
+                          method = "S",
+                          control = lmerControl(optCtrl = list(maxfun = 1e6)))
+
+
+```
+We found the main effect of Matchness (`r df1a_RT_anova_apa$full$Matchness`) and intercation between Matchness and Valence (`r df1a_RT_anova_apa$full$Matchness_Valence`)
+
+We carried out two separate ANOVA for both Match and mismatched trials.
+
+```{r 1a_RT_match, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+# anova for d prime with 2*2 design
+df1a_rt_acc_long_m  <- df1a_rt_acc_long %>% dplyr::filter(Matchness == 'Match')
+df1a_rt_acc_long_nm <- df1a_rt_acc_long %>% dplyr::filter(Matchness == 'Mismatch')
+
+df1a_RT_anova_m     <- afex::aov_ez('Subject','RT',df1a_rt_acc_long_m,  # using afex's function 
+                                  within = c('Valence'))
+df1a_RT_anova_m_apa <- df1a_RT_anova_m %>% papaja::apa_print()
+
+df1a_RT_anova_nm <- afex::aov_ez('Subject','RT',df1a_rt_acc_long_nm,  # using afex's function 
+                                  within = c('Valence'))
+df1a_RT_anova_nm_apa <- df1a_RT_anova_nm %>% papaja::apa_print()
+
+```
+For matched trials, we found the effect of valence `r df1a_RT_anova_m_apa$full$Valence`. 
+
+For non-matched trials, there was no significant effect of Valence (`r df1a_RT_anova_nm_apa$full$Valence`).
+
+```{r results='asis', echo = F}
+#knitr::kable(nice(df4b_dprime_anova), caption = "ANOVA of d prime")
+apa_table(df1a_RT_anova_m_apa$table
+  , caption = "A really beautiful ANOVA table."
+  , note = "Note that the column names contain beautiful mathematical copy: This is because the table has variable labels."
+)
+```
+
+We further examined the effect of valence for both self and other for mached trials. 
+
+```{r results='asis', echo = F}
+posthoc_1a_rt <- emmeans::emmeans(df1a_RT_anova_m, "Valence") # compare each valence for both self and other condition
+pairs(posthoc_1a_rt)
+```
+
+
 # Experiment 4a
 
 In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf. Sui et al., 2012), but we presented labels of different moral valence levels in the shapes. 
@@ -132,7 +237,14 @@ We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repe
 # anova for d prime with 2*2 design
 df4a_dprime_anova <- afex::aov_ez('Subject','dprime',df4a_dprime_long,  # using afex's function 
                                   within = c('Identity','Morality'))
-df4a_dprime_anova_apa <- df4a_dprime_anova %>% papaja::apa_print()
+
+# use LMM, random intercept for each participant
+df4a_d_mixed <- afex::mixed(dprime ~ Identity*Morality +(1|Subject), 
+                          df4a_dprime_long,
+                          method = "S",
+                          control = lmerControl(optCtrl = list(maxfun = 1e6)))
+
+df4a_dprime_anova_apa <- df4a_dprime_anova$aov %>% papaja::apa_print()
 #df4b_dprime_anova <- apa_print(df4b_dprime_anova)
 ```
 We found the effect of identity (`r df4a_dprime_anova_apa$full$Identity`) and its interaction with valence (the effect of gender differed by clinic, (`r df4a_dprime_anova_apa$full$Identity_Morality`). But the effect of valence was not found, `r df4a_dprime_anova_apa$full$Morality`.
@@ -162,7 +274,14 @@ We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3
 df4a_RT_anova <- afex::aov_ez('Subject','RT',df4a_rt_acc_long,  # using afex's function 
                                   within = c('Match','Identity','Morality'))
 df4a_RT_anova_apa <- df4a_RT_anova %>% papaja::apa_print()
-#df4b_dprime_anova <- apa_print(df4b_dprime_anova)
+
+# use LMM, random intercept for each participant
+df4a_RT_mixed <- afex::mixed(RT ~ Match*Identity*Morality +(1|Subject), 
+                          df4a_rt_acc_long,
+                          method = "S",
+                          control = lmerControl(optCtrl = list(maxfun = 1e6)))
+
+
 ```
 We found the main effect of Matchness (`r df4a_RT_anova_apa$full$Match`) and intercation between Matchness and Identity(`r df4a_RT_anova_apa$full$Match_Identity`)
 
